Fix color and sizing bug on IOS

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
     font-size: 20px;
+    color: black;
 }
 body{
     background-color: rgb(75, 80, 86);
@@ -32,7 +33,7 @@ body{
     width: 100%;
     text-align: right;
     font-size: 35px;
-    
+    overflow-wrap: anywhere;
 }
 .pad{
     display: flex;
@@ -47,7 +48,8 @@ body{
 }
 button{
     aspect-ratio: 1/1;
-    width: 75px
+    width: 75px;
+    height: 75px;
 }
 .active{
     background-color: lightsalmon;
